--- a/boot/pom.xml
+++ b/boot/pom.xml
@@ -44,5 +44,16 @@
             <version>[23.0.0.2,)</version>
             <type>zip</type>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
